--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <!-- Application information -->
-  <name>Learn PrivateEye</name>
+  <name>Learn Rubric Arbiter</name>
   <modelVersion>4.0.0</modelVersion>
   <groupId>wsu.blackboard</groupId>
-  <artifactId>learn-private-eye</artifactId>
+  <artifactId>learn-rubric-arbiter</artifactId>
   <packaging>war</packaging>
-  <version>0.11.20190131</version>
+  <version>0.0.4</version>
 
   <!-- Repositories -->
   <repositories>
@@ -23,6 +23,13 @@
 
   <!-- Dependencies -->
   <dependencies>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
+      <scope>provided</scope>
+    </dependency>
+
     <dependency>
       <groupId>blackboard.platform</groupId>
       <artifactId>bb-platform</artifactId>
