--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
     xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
     id="WebApp_ID" version="3.0" metadata-complete="true">
-  <display-name>Learn PrivateEye Building Block</display-name>
+  <display-name>Learn Rubric Arbiter Building Block</display-name>
 
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
